# distributed-tetris

./: Pipfile  README.md  pyproject.toml  tester-linux.sh  tester-windows.bat
data/: theme.json
src/: game.py  game_tetris.py  main.py  settings.py  shape.py  tetris_field.py  tetromino.py  utils.py
src/net/: exceptions.py  lobby.py  peer.py  peer_old.py  tetris_peer.py
src/state/: browse_lobby_state.py  game_state.py  lobby_state.py  menu_state.py  multi_player_state.py  multi_player_state_new.py  play_state.py  single_player_state.py  state_manager.py
src/state/impl/: browse_lobby_state.py  lobby_state.py  menu_state.py  multi_player_state.py  single_player_state.py
src/tetris/: tetris_field.py  tetromino.py
src/utils/: settings.py
tests/: test_lobby.py  test_peer.py
